Added kafka validation and save to DB
